--- a/config_demo.properties
+++ b/config_demo.properties
@@ -7,4 +7,4 @@ remote_url= http://localhost:4444/wd/hub
 #  http://192.168.29.15:4444/wd/hub
 
 #to start remote execution just go to docker application-login and start the all the containers and
-#give the remote url in config.properties and start  the execution
+#give the remote url in config_dev.properties and start  the execution
